--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@tensorflow/tfjs": "^1.5.1",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "ngx-qrcode2": "0.0.9",
     "rxjs": "~6.3.3",
+    "three": "^0.112.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
